# sem3labs

./: .gitignore  README.md
.github/workflows/: build.yml
.github/wrokflows/: build.yml
lab1/: CMakeLists.txt  README.md
lab1/includes/: app.h  date.h  employee.h  input_utils.h
lab1/src/: app.cpp  date.cpp  employee.cpp  input_utils.cpp  main.cpp
lab2/: CMakeLists.txt  README.md
lab2/includes/: app.h  string.h
lab2/src/: app.cpp  main.cpp  string.cpp
lab3/: CMakeLists.txt
lab3/includes/: app.h  entrepreneur.h  input_utils.h  person.h  shuttler.h  tourist.h
lab3/src/: app.cpp  date.cpp  entrepreneur.cpp  input_utils.cpp  person.cpp  shuttler.cpp  tourist.cpp
lab4/: CMakeLists.txt  Readme.md
lab4/includes/: app.h  commission_employee.h  hourly_employee.h  input_utils.h  salaried_employee.h  worker.h
lab4/src/: app.cpp  commission_employee.cpp  hourly_employee.cpp  input_utils.cpp  salaried_employee.cpp  worker.cpp
lab5/: CMakeLists.txt  Readme.md
lab5/includes/: app.h  input_utils.h  node.h  singly_linked_list.h
lab5/src/: app.cpp  input_utils.cpp  singly_linked_list.tpp
lab6/: CMakeLists.txt  Readme.md  main.cpp
lab6/includes/: app.h  input_utils.h  shuttler.h  tourist.h
lab6/src/: app.cpp  date.cpp  entrepreneur.cpp  input_utils.cpp  person.cpp  shuttler.cpp  tourist.cpp
lab7/: CMakeLists.txt  Readme.md
lab7/docs/: file.txt
lab7/includes/: app.h  file_reader.h  input_utils.h
lab7/src/: app.cpp  file_reader.cpp  input_utils.cpp  main.cpp
lab8/: CMakeLists.txt  main.cpp
lab8/includes/: app.h  doubly_linked_list.h  input_utils.h  (+1 more)
(+1 files in other folders)
